# zephyr_goodies

./: .clang-format  CMakeLists.txt  Kconfig  README.md
drivers/: CMakeLists.txt  Kconfig
drivers/disk/: CMakeLists.txt  Kconfig  Kconfig.eeprom  eepromdisk.c
drivers/shared_info/: CMakeLists.txt  Kconfig  shared_info.c  shared_info_handlers.c
drivers/zephyr_shared_data/: CMakeLists.txt  Kconfig  zephyr_shared_data.c  zephyr_shared_data_handlers.c
dts/bindings/: zephyr,shared-data.yaml
dts/bindings/disk/: zephyr,eeprom-disk.yaml
dts/bindings/misc/: zephyr,shared-info.yaml
include/zephyr/drivers/: shared_info.h  zephyr_shared_data.h
include/zephyr/settings/: settings_storage_area_store.h
include/zephyr/storage/: storage_area.h  storage_area_flash.h
include/zephyr/storage/storage_area/: storage_area.h  storage_area_disk.h  storage_area_eeprom.h  storage_area_flash.h  storage_area_ram.h  storage_area_store.h
samples/subsys/fs/littlefs-eeprom/: README.txt  prj.conf
samples/subsys/storage_area_store/storage_area_store_cb/: prj.conf
subsys/: CMakeLists.txt  Kconfig
subsys/settings/: CMakeLists.txt  Kconfig  settings_storage_area_store.c
subsys/storage/: CMakeLists.txt  Kconfig
subsys/storage/storage_area/: CMakeLists.txt  Kconfig  storage_area.c  storage_area_disk.c  storage_area_eeprom.c  storage_area_flash.c  storage_area_ram.c  storage_area_store.c
tests/drivers/shared_info/: CMakeLists.txt  prj.conf
tests/drivers/zephyr_shared_data/: prj.conf
tests/subsys/settings/: prj.conf
zephyr/: CMakeLists.txt  Kconfig  module.yml
(+29 files in other folders)
